<resources>
    <string name="app_name">StockScreenerNoCompose</string>
    <string name="stock_screener">Stock Screener</string>
    <string name="validate">Validate</string>
    <string name="ticker_symbol">Ticker Symbol</string>
    <string name="app_ticker_symbol">Please enter the ticker symbol</string>
    <string name="description">Description</string>
    <string name="market_cap">Market cap: %1$s</string>
    <string name="enterprise_val">Enterprise value: %1$s</string>
    <string name="peRatio">PE ratio: %1$s</string>
    <string name="pbRatio">PB ratio: %1$s</string>
    <string name="trailingPEG1Y">Trailing PEG1Y: %1$s</string>
    <string name="free_cash_flow_validation">Free Cash Flow Increase</string>
    <string name="shares_validation">Total shares Decrease</string>
    <string name="revenue_validation">Revenue Increase</string>
    <string name="net_income_validation">Net Income Increase</string>
    <string name="roic_validation">ROIC > 9</string>
    <string name="liabilities_validation">Sustainable long term liabilities</string>
    <string name="price_to_free_cash_flow_validation">Price to 20 year average free cash flow</string>
    <string name="liabilities_repay">%1$s years to repay</string>

    <!--contentDescription-->
    <string name="backButtonContentDescription" translatable="false">Back Button</string>
    <string name="homeButtonContentDescription" translatable="false">Home Button</string>
    <string name="petImageContentDescription" translatable="false">Pet Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>