<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cases.resultPage.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/small_button_width"
            android:layout_height="@dimen/small_button_height"
            android:layout_margin="10dp"
            android:contentDescription="@string/backButtonContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/black" />

        <LinearLayout
            android:id="@+id/basic_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/company_name"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                tools:text="Apple Inc." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/stock_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="NYSE" />

                <TextView
                    android:id="@+id/company_ticker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="AAPL" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/description_title"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basic_details" />

        <TextView
            android:id="@+id/description_text"
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_title"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/market_cap_text"
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            tools:text="Market Cap" />

        <TextView
            android:id="@+id/enterprise_val_text"
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/market_cap_text"
            tools:text="Enterprise value" />

        <ImageView
            android:id="@+id/pe_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/peRatio_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/peRatio_text" />

        <TextView
            android:id="@+id/peRatio_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pe_result_box"
            app:layout_constraintTop_toBottomOf="@+id/enterprise_val_text"
            tools:text="pe Ratio" />

        <ImageView
            android:id="@+id/pbRatio_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/pbRatio_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pbRatio_text" />

        <TextView
            android:id="@+id/pbRatio_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pbRatio_result_box"
            app:layout_constraintTop_toBottomOf="@+id/peRatio_text"
            tools:text="pb Ratio" />

        <ImageView
            android:id="@+id/trailingPEG1Y_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/trailingPEG1Y_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trailingPEG1Y_text" />

        <TextView
            android:id="@+id/trailingPEG1Y_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trailingPEG1Y_result_box"
            app:layout_constraintTop_toBottomOf="@+id/pbRatio_text"
            tools:text="trailingPEG1Y" />

        <ImageView
            android:id="@+id/free_cash_flow_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/free_cash_flow_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/free_cash_flow_text" />

        <TextView
            android:id="@+id/free_cash_flow_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/free_cash_flow_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/free_cash_flow_result_box"
            app:layout_constraintTop_toBottomOf="@+id/trailingPEG1Y_text" />

        <ImageView
            android:id="@+id/shares_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/shares_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shares_text" />

        <TextView
            android:id="@+id/shares_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/shares_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shares_result_box"
            app:layout_constraintTop_toBottomOf="@+id/free_cash_flow_text" />

        <ImageView
            android:id="@+id/revenue_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/revenue_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/revenue_text" />

        <TextView
            android:id="@+id/revenue_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/revenue_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/revenue_result_box"
            app:layout_constraintTop_toBottomOf="@+id/shares_text" />

        <ImageView
            android:id="@+id/net_income_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/net_income_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/net_income_text" />

        <TextView
            android:id="@+id/net_income_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/net_income_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/net_income_result_box"
            app:layout_constraintTop_toBottomOf="@+id/revenue_text" />

        <ImageView
            android:id="@+id/roic_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/roic_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/roic_text" />

        <TextView
            android:id="@+id/roic_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/roic_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/roic_result_box"
            app:layout_constraintTop_toBottomOf="@+id/net_income_text" />

        <ImageView
            android:id="@+id/long_term_liabilities_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/long_term_liabilities_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/long_term_liabilities_text" />

        <TextView
            android:id="@+id/long_term_liabilities_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/liabilities_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/long_term_liabilities_result_box"
            app:layout_constraintTop_toBottomOf="@+id/roic_text" />

        <ImageView
            android:id="@+id/price_to_free_cash_flow_result_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/price_to_free_cash_flow_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price_to_free_cash_flow_text" />

        <TextView
            android:id="@+id/price_to_free_cash_flow_text"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/price_to_free_cash_flow_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price_to_free_cash_flow_result_box"
            app:layout_constraintTop_toBottomOf="@+id/long_term_liabilities_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>